- add c3p0 connection pooling - enable snapshot downloader

--- a/src/main/resources/EveKitFrontend.properties
+++ b/src/main/resources/EveKitFrontend.properties
@@ -42,7 +42,6 @@ enterprises.orbital.evekit.frontend.basepath = ${enterprises.orbital.evekit.fron
 enterprises.orbital.evekit.frontend.appname = ${enterprises.orbital.evekit.frontend.appname}
 enterprises.orbital.evekit.frontend.apppath = ${enterprises.orbital.evekit.frontend.basepath}/${enterprises.orbital.evekit.frontend.appname}
 
-
 # Maven project version
 enterprises.orbital.evekit.frontend.version = ${project.version}
 
@@ -59,6 +58,11 @@ enterprises.orbital.evekit.sync_account_limit = ${enterprises.orbital.evekit.syn
 # The limit on the number of access keys per sync account.  This limit only applies to non-admin users.
 enterprises.orbital.evekit.access_key_limit = ${enterprises.orbital.evekit.access_key_limit}
 
+##########################################################################################################
+# Snapshot settings
+##########################################################################################################
 
+# Directory will daily snapshots will be stored
+enterprises.orbital.evekit.snapshot.directory = ${enterprises.orbital.evekit.snapshot.directory}
 
 
