- add swagger UI release - enable model API to be viewed in frontend

--- a/src/main/resources/EveKitFrontend.properties
+++ b/src/main/resources/EveKitFrontend.properties
@@ -65,4 +65,8 @@ enterprises.orbital.evekit.access_key_limit = ${enterprises.orbital.evekit.acces
 # Directory will daily snapshots will be stored
 enterprises.orbital.evekit.snapshot.directory = ${enterprises.orbital.evekit.snapshot.directory}
 
+##########################################################################################################
+# Swagger UI settings
+##########################################################################################################
+enterprises.orbital.evekit.frontend.swaggerui.model = ${enterprises.orbital.evekit.frontend.swaggerui.model} 
 
