--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
               <includes>
                 <include>**/web.xml</include>
                 <include>**/index.html</include>
+                <include>**/api-model.html</include>
               </includes>
             </resource>
           </webResources>
