- enable google OAuth authentication

--- a/src/main/resources/EveKitFrontend.properties
+++ b/src/main/resources/EveKitFrontend.properties
@@ -18,7 +18,9 @@ enterprises.orbital.evekit.account.persistence_unit = evekit-account
 # Authentication Configuration
 ##########################################################################################################
 
-# TODO: Google OAuth settings
+# Google OAuth settings
+enterprises.orbital.auth.google_api_key = ${enterprises.orbital.auth.google_api_key}
+enterprises.orbital.auth.google_api_secret = ${enterprises.orbital.auth.google_api_secret}
 
 # EVE SSO application settings
 enterprises.orbital.auth.eve_client_id = ${enterprises.orbital.auth.eve_client_id}
