commit final changes necessary to get release working

--- a/src/main/resources/EveKitFrontend.properties
+++ b/src/main/resources/EveKitFrontend.properties
@@ -32,8 +32,8 @@ enterprises.orbital.auth.eve_api_class = ${enterprises.orbital.auth.eve_api_clas
 enterprises.orbital.auth.twitter_api_key = ${enterprises.orbital.auth.twitter_api_key}
 enterprises.orbital.auth.twitter_api_secret = ${enterprises.orbital.auth.twitter_api_secret}
 
-# This allows local login as an EVE user.  Remove for the live site.
-enterprises.orbital.auth.eve_debug_mode = true
+# When true, this allows local login as an EVE user.  Normally this is false for the live site.
+enterprises.orbital.auth.eve_debug_mode = ${enterprises.orbital.auth.eve_debug_mode}
 
 ##########################################################################################################
 # Build settings
