--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
     <enterprises.orbital.evekit.frontend.db.properties.dialect>org.hibernate.dialect.MySQLDialect</enterprises.orbital.evekit.frontend.db.properties.dialect>
     <enterprises.orbital.evekit.frontend.db.account.driver>com.mysql.jdbc.Driver</enterprises.orbital.evekit.frontend.db.account.driver>
     <enterprises.orbital.evekit.frontend.db.account.dialect>org.hibernate.dialect.MySQLDialect</enterprises.orbital.evekit.frontend.db.account.dialect>
+    <enterprises.orbital.auth.eve_api_class>org.scribe.builder.api.EVEApi</enterprises.orbital.auth.eve_api_class>
+    <enterprises.orbital.auth.eve_verify_url>https://login.eveonline.com/oauth/verify</enterprises.orbital.auth.eve_verify_url>
+    <enterprises.orbital.auth.eve_debug_mode>true</enterprises.orbital.auth.eve_debug_mode>
   </properties>
   
   <build>
