--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
     <enterprises.orbital.auth.eve_api_class>org.scribe.builder.api.EVEApi</enterprises.orbital.auth.eve_api_class>
     <enterprises.orbital.auth.eve_verify_url>https://login.eveonline.com/oauth/verify</enterprises.orbital.auth.eve_verify_url>
     <enterprises.orbital.auth.eve_debug_mode>true</enterprises.orbital.auth.eve_debug_mode>
+    <enterprises.orbital.evekit.sync_account_limit>100</enterprises.orbital.evekit.sync_account_limit>
+    <enterprises.orbital.evekit.access_key_limit>10</enterprises.orbital.evekit.access_key_limit>
   </properties>
   
   <build>
