--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
               <includes>
                 <include>**/web.xml</include>
                 <include>**/index.html</include>
+                <include>**/swagger.html</include>
                 <include>**/api-model.html</include>
               </includes>
             </resource>
