- add external link to SDE page - add pre-population of access keys from the explore button

--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
                 <include>**/web.xml</include>
                 <include>**/index.html</include>
                 <include>**/swagger.html</include>
-                <include>**/api-model.html</include>
+                <include>**/api-page.js</include>
               </includes>
             </resource>
           </webResources>
