--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>enterprises.orbital</groupId>
     <artifactId>license</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0</version>
   </parent>
   <groupId>enterprises.orbital.evekit</groupId>
   <artifactId>frontend</artifactId>
-  <version>1.0.2</version>
+  <version>2.0.0</version>
   <packaging>war</packaging>
   <name>EveKit Frontend</name>
   <description>Main user facing web page and services</description>
@@ -17,7 +17,7 @@
   <scm>
   	<url>https://github.com/OrbitalEnterprises/evekit-frontend</url>
   	<connection>scm:git:https://github.com/OrbitalEnterprises/evekit-frontend.git</connection>
-  	<tag>rel_1_0_2</tag>
+  	<tag>rel_2_0_0</tag>
   	<developerConnection>scm:git:git@github.com:OrbitalEnterprises/evekit-frontend.git</developerConnection>
   </scm>
 
@@ -34,6 +34,13 @@
     <enterprises.orbital.auth.eve_debug_mode>true</enterprises.orbital.auth.eve_debug_mode>
     <enterprises.orbital.evekit.sync_account_limit>100</enterprises.orbital.evekit.sync_account_limit>
     <enterprises.orbital.evekit.access_key_limit>10</enterprises.orbital.evekit.access_key_limit>
+    <evekit.version>2.0.0</evekit.version>
+    <servlet.version>3.1.0</servlet.version>
+    <swagger.version>1.5.7</swagger.version>
+    <jersey.containers.version>2.1</jersey.containers.version>
+    <mysql.connector.version>5.1.38</mysql.connector.version>
+    <hibernate.version>5.0.6.Final</hibernate.version>
+    <log4j.version>1.2.17</log4j.version>
   </properties>
   
   <build>
@@ -86,47 +93,47 @@
     <dependency>
       <groupId>enterprises.orbital.evekit</groupId>
       <artifactId>account-manager-ws</artifactId>
-      <version>1.0.2</version>
+      <version>${evekit.version}</version>
     </dependency>
     <dependency>
       <groupId>enterprises.orbital.evekit</groupId>
       <artifactId>snapshot</artifactId>
-      <version>1.0.2</version>
+      <version>${evekit.version}</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
-      <version>3.1.0</version>
+      <version>${servlet.version}</version>
     </dependency>    
     <dependency>
       <groupId>io.swagger</groupId>
       <artifactId>swagger-annotations</artifactId>
-      <version>1.5.7</version>
+      <version>${swagger.version}</version>
     </dependency> 
     <dependency>
       <groupId>io.swagger</groupId>
       <artifactId>swagger-jersey2-jaxrs</artifactId>
-      <version>1.5.7</version>
+      <version>${swagger.version}</version>
     </dependency>
     <dependency>
       <groupId>org.glassfish.jersey.containers</groupId>
       <artifactId>jersey-container-servlet</artifactId>
-      <version>2.1</version>
+      <version>${jersey.containers.version}</version>
     </dependency>
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.38</version>
+      <version>${mysql.connector.version}</version>
     </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-c3p0</artifactId>
-      <version>5.0.6.Final</version>
+      <version>${hibernate.version}</version>
     </dependency>    
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
+      <version>${log4j.version}</version>
     </dependency>    
   </dependencies>  
 </project>
