- Switch to multi-tool front page - Add XML API section - Add SDE API section - Add market data API section

--- a/src/main/resources/EveKitFrontend.properties
+++ b/src/main/resources/EveKitFrontend.properties
@@ -44,6 +44,12 @@ enterprises.orbital.evekit.frontend.basepath = ${enterprises.orbital.evekit.fron
 enterprises.orbital.evekit.frontend.appname = ${enterprises.orbital.evekit.frontend.appname}
 enterprises.orbital.evekit.frontend.apppath = ${enterprises.orbital.evekit.frontend.basepath}/${enterprises.orbital.evekit.frontend.appname}
 
+# Path for proxy servlet
+enterprises.orbital.evekit.frontend.proxypath  = ${enterprises.orbital.evekit.frontend.proxypath}
+
+# Path for marketdata service
+enterprises.orbital.evekit.marketdata.proxypath  = ${enterprises.orbital.evekit.marketdata.proxypath}
+
 # Maven project version
 enterprises.orbital.evekit.frontend.version = ${project.version}
 
@@ -64,7 +70,7 @@ enterprises.orbital.evekit.access_key_limit = ${enterprises.orbital.evekit.acces
 # Snapshot settings
 ##########################################################################################################
 
-# Directory will daily snapshots will be stored
+# Directory where daily snapshots will be stored
 enterprises.orbital.evekit.snapshot.directory = ${enterprises.orbital.evekit.snapshot.directory}
 
 ##########################################################################################################
