--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,12 @@
                 <include>**/web.xml</include>
                 <include>**/index.html</include>
                 <include>**/swagger.html</include>
+                <include>**/swagger-xmlproxy.html</include>
+                <include>**/swagger-marketdata.html</include>
+                <include>**/xmlproxy-main.html</include>
                 <include>**/api-page.js</include>
+                <include>**/xmlproxy-page.js</include>
+                <include>**/md-page.js</include>
               </includes>
             </resource>
           </webResources>
