--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>enterprises.orbital.evekit</groupId>
   <artifactId>frontend</artifactId>
-  <version>2.0.0</version>
+  <version>3.0.0</version>
   <packaging>war</packaging>
   <name>EveKit Frontend</name>
   <description>Main user facing web page and services</description>
@@ -17,7 +17,7 @@
   <scm>
   	<url>https://github.com/OrbitalEnterprises/evekit-frontend</url>
   	<connection>scm:git:https://github.com/OrbitalEnterprises/evekit-frontend.git</connection>
-  	<tag>rel_2_0_0</tag>
+  	<tag>rel_3_0_0</tag>
   	<developerConnection>scm:git:git@github.com:OrbitalEnterprises/evekit-frontend.git</developerConnection>
   </scm>
 
@@ -31,10 +31,10 @@
     <enterprises.orbital.evekit.frontend.db.account.dialect>org.hibernate.dialect.MySQLDialect</enterprises.orbital.evekit.frontend.db.account.dialect>
     <enterprises.orbital.auth.eve_api_class>org.scribe.builder.api.EVEApi</enterprises.orbital.auth.eve_api_class>
     <enterprises.orbital.auth.eve_verify_url>https://login.eveonline.com/oauth/verify</enterprises.orbital.auth.eve_verify_url>
-    <enterprises.orbital.auth.eve_debug_mode>true</enterprises.orbital.auth.eve_debug_mode>
+    <enterprises.orbital.auth.eve_debug_mode>false</enterprises.orbital.auth.eve_debug_mode>
     <enterprises.orbital.evekit.sync_account_limit>100</enterprises.orbital.evekit.sync_account_limit>
     <enterprises.orbital.evekit.access_key_limit>10</enterprises.orbital.evekit.access_key_limit>
-    <evekit.version>2.0.0</evekit.version>
+    <evekit.version>3.0.0</evekit.version>
     <servlet.version>3.1.0</servlet.version>
     <swagger.version>1.5.7</swagger.version>
     <jersey.containers.version>2.1</jersey.containers.version>
