--- a/src/main/resources/EveKitFrontend.properties
+++ b/src/main/resources/EveKitFrontend.properties
@@ -14,6 +14,9 @@ enterprises.orbital.evekit.frontend.properties.persistence_unit = evekit-propert
 # Persistence unit for account management
 enterprises.orbital.evekit.account.persistence_unit = evekit-account
 
+# Persistence unit for ref data management
+enterprises.orbital.evekit.ref.persistence_unit = evekit-account
+
 ##########################################################################################################
 # Authentication Configuration
 ##########################################################################################################
