--- a/src/main/resources/EveKitFrontend.properties
+++ b/src/main/resources/EveKitFrontend.properties
@@ -80,4 +80,5 @@ enterprises.orbital.evekit.snapshot.directory = ${enterprises.orbital.evekit.sna
 # Swagger UI settings
 ##########################################################################################################
 enterprises.orbital.evekit.frontend.swaggerui.model = ${enterprises.orbital.evekit.frontend.swaggerui.model} 
+enterprises.orbital.evekit.frontend.swaggerui.refmodel = ${enterprises.orbital.evekit.frontend.swaggerui.refmodel} 
 
