--- a/src/main/resources/EveKitFrontend.properties
+++ b/src/main/resources/EveKitFrontend.properties
@@ -29,7 +29,6 @@ enterprises.orbital.auth.google_api_secret = ${enterprises.orbital.auth.google_a
 enterprises.orbital.auth.eve_client_id = ${enterprises.orbital.auth.eve_client_id}
 enterprises.orbital.auth.eve_secret_key = ${enterprises.orbital.auth.eve_secret_key}
 enterprises.orbital.auth.eve_verify_url = ${enterprises.orbital.auth.eve_verify_url}
-enterprises.orbital.auth.eve_api_class = ${enterprises.orbital.auth.eve_api_class}
 
 # Twitter OAuth settings
 enterprises.orbital.auth.twitter_api_key = ${enterprises.orbital.auth.twitter_api_key}
@@ -37,6 +36,10 @@ enterprises.orbital.auth.twitter_api_secret = ${enterprises.orbital.auth.twitter
 
 # When true, this allows local login as an EVE user.  Normally this is false for the live site.
 enterprises.orbital.auth.eve_debug_mode = ${enterprises.orbital.auth.eve_debug_mode}
+
+# EVE SSO token management settings
+enterprises.orbital.token.eve_client_id = ${enterprises.orbital.token.eve_client_id}
+enterprises.orbital.token.eve_secret_key = ${enterprises.orbital.token.eve_secret_key}
 
 ##########################################################################################################
 # Build settings
