prep for 4.0 release

--- a/src/main/resources/EveKitFrontend.properties
+++ b/src/main/resources/EveKitFrontend.properties
@@ -41,6 +41,9 @@ enterprises.orbital.auth.eve_debug_mode = ${enterprises.orbital.auth.eve_debug_m
 enterprises.orbital.token.eve_client_id = ${enterprises.orbital.token.eve_client_id}
 enterprises.orbital.token.eve_secret_key = ${enterprises.orbital.token.eve_secret_key}
 
+# Fragment to be set after attempting to add ESI credential
+enterprises.orbital.evekit.reauthFragment = ${enterprises.orbital.evekit.reauthFragment}
+
 ##########################################################################################################
 # Build settings
 ##########################################################################################################
@@ -49,6 +52,9 @@ enterprises.orbital.token.eve_secret_key = ${enterprises.orbital.token.eve_secre
 enterprises.orbital.evekit.frontend.basepath = ${enterprises.orbital.evekit.frontend.basepath}
 enterprises.orbital.evekit.frontend.appname = ${enterprises.orbital.evekit.frontend.appname}
 enterprises.orbital.evekit.frontend.apppath = ${enterprises.orbital.evekit.frontend.basepath}/${enterprises.orbital.evekit.frontend.appname}
+
+# Servlet path also required for ESI credential registration callback
+enterprises.orbital.evekit.accountws.apppath = ${enterprises.orbital.evekit.frontend.basepath}/${enterprises.orbital.evekit.frontend.appname}
 
 # Path for proxy servlet
 enterprises.orbital.evekit.frontend.proxypath  = ${enterprises.orbital.evekit.frontend.proxypath}
