--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>enterprises.orbital.evekit</groupId>
   <artifactId>frontend</artifactId>
-  <version>3.1.0</version>
+  <version>4.0.0</version>
   <packaging>war</packaging>
   <name>EveKit Frontend</name>
   <description>Main user facing web page and services</description>
@@ -32,7 +32,8 @@
     <enterprises.orbital.auth.eve_debug_mode>false</enterprises.orbital.auth.eve_debug_mode>
     <enterprises.orbital.evekit.sync_account_limit>100</enterprises.orbital.evekit.sync_account_limit>
     <enterprises.orbital.evekit.access_key_limit>10</enterprises.orbital.evekit.access_key_limit>
-    <evekit.version>3.1.0</evekit.version>
+    <enterprises.orbital.evekit.reauthFragment>account/view</enterprises.orbital.evekit.reauthFragment>
+    <evekit.version>4.0.0</evekit.version>
     <servlet.version>3.1.0</servlet.version>
     <swagger.version>1.5.7</swagger.version>
     <jersey.containers.version>2.1</jersey.containers.version>
